--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,18 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.13-bookworm",
+	"name": "Tronbyt Server",
+	"service": "web",
+	"dockerComposeFile": "../docker-compose.devcontainer.yaml",
+	"workspaceFolder": "/app",
+	"overrideCommand": true,
+	"features": {
+		"ghcr.io/devcontainers/features/python:1": {
+			"version": "3.11"
+		},
+		"ghcr.io/devcontainers-extra/features/pdm:2": {},
+		"ghcr.io/devcontainers/features/common-utils:2": {}
+	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
