--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 name: Tronbyt Server
-version: "1.2.4"
+version: "1.2.5"
 slug: homeassistant-addon
 description: "Serve Tronbyt apps"
 url: "https://github.com/gxlabs/tronbyt-server/tree/main"
@@ -11,7 +11,8 @@ arch:
   - amd64
   - i386
 init: false
-ingress: false
+ingress: true
+ingress_port: 8000
 webui: "http://[HOST]:[PORT:8000]"
 ports:
   8000/tcp: 8000
