--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: Tronbyt Server
-version: "1.2.13"
-slug: homeassistant-addon
+version: "1.2.14"
+slug: tronbyt_server
 description: "Serve Tronbyt apps"
 url: "https://github.com/gxlabs/tronbyt-server/tree/main"
 startup: application
