--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 name: Tronbyt Server
-version: "1.2.15"
+version: "1.2.16"
 slug: tronbyt_server
 description: "Serve Tronbyt apps"
 url: "https://github.com/gxlabs/tronbyt-server/tree/main"
@@ -13,6 +13,7 @@ arch:
 init: false
 ingress: true
 ingress_port: 8000
+webui: http://[HOST]:[PORT:2839]/adminindex
 options:
   server_hostname_or_ip: "localhost"
   production: false
