--- a/ingress.conf
+++ b/ingress.conf
@@ -1,7 +1,21 @@
 server {
     listen 8099;
+    error_log /var/log/nginx/error.log debug;
     
-    location / {
+    location ~* .* {
+        # Log all headers for debugging
+        access_log /var/log/nginx/access.log combined;
+        error_log /var/log/nginx/error.log;
+        
+        # Log headers to error log
+        set $all_headers "";
+        set $all_headers "${all_headers}Host: $host\n";
+        set $all_headers "${all_headers}X-Ingress-Path: $http_x_ingress_path\n";
+        set $all_headers "${all_headers}X-Real-IP: $remote_addr\n";
+        set $all_headers "${all_headers}URI: $uri\n";
+        set $all_headers "${all_headers}Args: $args\n";
+        error_log /var/log/nginx/debug.log info;
+        
         # Use the X-Ingress-Path header value as the request path
         set $ingress_path $http_x_ingress_path;
         if ($ingress_path = "") {
@@ -13,5 +27,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Original-URI $uri;
+        proxy_set_header X-Original-Args $args;
     }
 }
