--- a/ingress.conf
+++ b/ingress.conf
@@ -1,33 +1,26 @@
 server {
     listen 8099;
-    error_log /var/log/nginx/error.log debug;
     
-    location ~* .* {
-        # Log all headers for debugging
-        access_log /var/log/nginx/access.log combined;
-        error_log /var/log/nginx/error.log;
+    location / {
+        # Handle Home Assistant ingress by using X-Ingress-Path header
+        set $target_path $http_x_ingress_path;
         
-        # Log headers to error log
-        set $all_headers "";
-        set $all_headers "${all_headers}Host: $host\n";
-        set $all_headers "${all_headers}X-Ingress-Path: $http_x_ingress_path\n";
-        set $all_headers "${all_headers}X-Real-IP: $remote_addr\n";
-        set $all_headers "${all_headers}URI: $uri\n";
-        set $all_headers "${all_headers}Args: $args\n";
-        error_log /var/log/nginx/debug.log info;
-        
-        # Use the X-Ingress-Path header value as the request path
-        set $ingress_path $http_x_ingress_path;
-        if ($ingress_path = "") {
-            set $ingress_path $uri;
+        # If no X-Ingress-Path header, use the original URI
+        if ($target_path = "") {
+            set $target_path $uri;
         }
         
-        proxy_pass http://127.0.0.1:8000$ingress_path$is_args$args;
+        proxy_pass http://127.0.0.1:8000$target_path$is_args$args;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Original-URI $uri;
-        proxy_set_header X-Original-Args $args;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_http_version 1.1;
+        proxy_cache_bypass $http_upgrade;
+        proxy_redirect off;
     }
 }
