--- a/ingress.conf
+++ b/ingress.conf
@@ -1,15 +1,17 @@
 server {
     listen 8099;
-    
+    access_log /var/log/nginx/access.log combined;
+    error_log /var/log/nginx/error.log;
+
     location / {
         # Handle Home Assistant ingress by using X-Ingress-Path header
         set $target_path $http_x_ingress_path;
-        
+
         # If no X-Ingress-Path header, use the original URI
         if ($target_path = "") {
             set $target_path $uri;
         }
-        
+
         proxy_pass http://127.0.0.1:8000$target_path$is_args$args;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
