--- a/ingress.conf
+++ b/ingress.conf
@@ -3,7 +3,7 @@ server {
     access_log /var/log/nginx/access.log combined;
     error_log /var/log/nginx/error.log;
 
-    location / {
+    location ~* ^/.* {
         # Handle Home Assistant ingress by using X-Ingress-Path header
         set $target_path $http_x_ingress_path;
 
