--- a/ingress.conf
+++ b/ingress.conf
@@ -1,9 +1,30 @@
+log_format debug_format '$remote_addr - $remote_user [$time_local] '
+                        '"$request" $status $body_bytes_sent '
+                        '"$http_referer" "$http_user_agent" '
+                        'headers: host="$host" '
+                        'x_ingress_path="$http_x_ingress_path" '
+                        'x_hassio_key="$http_x_hassio_key" '
+                        'x_real_ip="$http_x_real_ip" '
+                        'x_forwarded_for="$http_x_forwarded_for" '
+                        'x_forwarded_proto="$http_x_forwarded_proto" '
+                        'all_headers="$http_authorization|$http_cookie|$http_accept" '
+                        'uri="$uri" args="$args" target="$target_path"';
+
 server {
     listen 8099;
-    access_log /var/log/nginx/access.log combined;
-    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log debug_format;
+    error_log /var/log/nginx/error.log debug;
 
     location ~* ^/.* {
+        # Log everything for debugging
+        set $log_headers "REQUEST: $request_method $uri";
+        set $log_headers "$log_headers | HOST: $host";
+        set $log_headers "$log_headers | X-INGRESS-PATH: $http_x_ingress_path";
+        set $log_headers "$log_headers | X-HASSIO-KEY: $http_x_hassio_key";
+        set $log_headers "$log_headers | USER-AGENT: $http_user_agent";
+        set $log_headers "$log_headers | REFERER: $http_referer";
+        set $log_headers "$log_headers | ARGS: $args";
+        
         # Handle Home Assistant ingress by using X-Ingress-Path header
         set $target_path $http_x_ingress_path;
 
@@ -12,6 +33,9 @@ server {
             set $target_path $uri;
         }
 
+        # Log the target path we're using
+        error_log /var/log/nginx/error.log;
+        
         proxy_pass http://127.0.0.1:8000$target_path$is_args$args;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -19,10 +43,17 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Original-URI $uri;
+        proxy_set_header X-Original-Args $args;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_http_version 1.1;
         proxy_cache_bypass $http_upgrade;
         proxy_redirect off;
+        
+        # Add response headers for debugging
+        add_header X-Debug-Target-Path $target_path;
+        add_header X-Debug-Original-URI $uri;
+        add_header X-Debug-Ingress-Path $http_x_ingress_path;
     }
 }
