--- a/ingress.conf
+++ b/ingress.conf
@@ -7,6 +7,8 @@ log_format debug_format '$remote_addr - $remote_user [$time_local] '
                         'x_real_ip="$http_x_real_ip" '
                         'x_forwarded_for="$http_x_forwarded_for" '
                         'x_forwarded_proto="$http_x_forwarded_proto" '
+                        'content_type="$http_content_type" '
+                        'content_length="$http_content_length" '
                         'all_headers="$http_authorization|$http_cookie|$http_accept" '
                         'uri="$uri" args="$args" target="$target_path"';
 
@@ -25,13 +27,9 @@ server {
         set $log_headers "$log_headers | REFERER: $http_referer";
         set $log_headers "$log_headers | ARGS: $args";
         
-        # Handle Home Assistant ingress by using X-Ingress-Path header
-        set $target_path $http_x_ingress_path;
-
-        # If no X-Ingress-Path header, use the original URI
-        if ($target_path = "") {
-            set $target_path $uri;
-        }
+        # Use the actual requested URI, not the ingress path
+        # Home Assistant sends the real path in the request, not the header
+        set $target_path $uri;
 
         # Log the target path we're using
         error_log /var/log/nginx/error.log;
