--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,9 @@
 			"version": "3.11"
 		},
 		"ghcr.io/devcontainers-extra/features/pdm:2": {},
-		"ghcr.io/devcontainers/features/common-utils:2": {}
+		"ghcr.io/devcontainers/features/common-utils:2": {},
+		"ghcr.io/devcontainers/features/node:1": {},
+		"ghcr.io/anthropics/devcontainer-features/claude-code:1.0.5": {}
 	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
